{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 176,
  "lineage": "7d857db7-13fd-cca0-d856-4e3c450c0536",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dbClient-EC2-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:471112894115:instance/i-0e8efa95564921c98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dbClient_profile",
            "id": "i-0e8efa95564921c98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_bax",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04723943d7d6e6389",
            "private_dns": "i-0e8efa95564921c98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "resource-name"
              }
            ],
            "private_ip": "10.3.7.77",
            "public_ip": "54.172.216.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d30c41689e14a701",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c1b4f5e93914ed3",
            "tags": {
              "Name": "ec2-dbClient"
            },
            "tags_all": {
              "Name": "ec2-dbClient"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e88ebf02399b2aa6"
            ]
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.dbClient_Profile",
            "module.ec2.aws_iam_role.dbClient_Role",
            "module.ec2.aws_key_pair.key_bax",
            "module.ec2.data.template_file.postgres",
            "module.secret.aws_secretsmanager_secret.db_secret_bax",
            "module.secret.aws_secretsmanager_secret_version.db_secret_bax_version",
            "module.vpc.aws_security_group.ec2_dbSG",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webClient-EC2-Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:471112894115:instance/i-06470b37e34d5be7d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "webClient_profile",
            "id": "i-06470b37e34d5be7d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_bax",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00a829d883f1b7f02",
            "private_dns": "i-06470b37e34d5be7d.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "resource-name"
              }
            ],
            "private_ip": "10.3.9.87",
            "public_ip": "44.214.92.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01ff99ac4f0441849",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0478f7e368234c967",
            "tags": {
              "Name": "ec2-webClient"
            },
            "tags_all": {
              "Name": "ec2-webClient"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022c1efc93943c0f9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.webClient_Profile",
            "module.ec2.aws_iam_role.webClient_Role",
            "module.ec2.aws_key_pair.key_bax",
            "module.ec2.data.template_file.ngix",
            "module.vpc.aws_security_group.ec2_webSG",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112894115:loadbalancer/app/lb-privatebin/67ac3e8f6f4ce48c",
            "arn_suffix": "app/lb-privatebin/67ac3e8f6f4ce48c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-privatebin-1733557805.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112894115:loadbalancer/app/lb-privatebin/67ac3e8f6f4ce48c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-privatebin",
            "preserve_host_header": false,
            "security_groups": [
              "sg-022c1efc93943c0f9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035cadf8db8c1ed60"
              },
              {
                "subnet_id": "subnet-06c1b4f5e93914ed3"
              }
            ],
            "subnets": [
              "subnet-035cadf8db8c1ed60",
              "subnet-06c1b4f5e93914ed3"
            ],
            "vpc_id": "vpc-0d4a72e13a764ea58",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.ec2_webSG",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112894115:listener/app/lb-privatebin/67ac3e8f6f4ce48c/4c756098e86aeaac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:471112894115:targetgroup/target-group/bd8c4acb843abd0e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112894115:listener/app/lb-privatebin/67ac3e8f6f4ce48c/4c756098e86aeaac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:471112894115:loadbalancer/app/lb-privatebin/67ac3e8f6f4ce48c",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.application_load_balancer",
            "module.ecs.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.ec2_webSG",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:471112894115:targetgroup/target-group/bd8c4acb843abd0e",
            "arn_suffix": "targetgroup/target-group/bd8c4acb843abd0e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:471112894115:targetgroup/target-group/bd8c4acb843abd0e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:471112894115:loadbalancer/app/lb-privatebin/67ac3e8f6f4ce48c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02304b5dd1185132d",
            "arn": "arn:aws:ec2:us-east-1:471112894115:elastic-ip/eipalloc-02304b5dd1185132d",
            "association_id": "eipassoc-088a25ba044fab556",
            "domain": "vpc",
            "id": "eipalloc-02304b5dd1185132d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0975f7db178d48ba0",
            "private_dns": "ip-10-3-5-157.ec2.internal",
            "private_ip": "10.3.5.157",
            "public_dns": "ec2-18-233-246-237.compute-1.amazonaws.com",
            "public_ip": "18.233.246.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:internet-gateway/igw-0d3f24a6f4be7a915",
            "id": "igw-0d3f24a6f4be7a915",
            "owner_id": "471112894115",
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02304b5dd1185132d",
            "association_id": "eipassoc-088a25ba044fab556",
            "connectivity_type": "public",
            "id": "nat-02bda3e6d6211b332",
            "network_interface_id": "eni-0975f7db178d48ba0",
            "private_ip": "10.3.5.157",
            "public_ip": "18.233.246.237",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035cadf8db8c1ed60"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-065dffe5aea02dc1d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02bda3e6d6211b332",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-065dffe5aea02dc1d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main-natgw",
            "module.vpc.aws_route_table.vpc_private_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d3f24a6f4be7a915",
            "id": "r-rtb-07035f535ed96dfe51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07035f535ed96dfe5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main-igw",
            "module.vpc.aws_route_table.vpc_public_rt",
            "module.vpc.aws_vpc.msk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:route-table/rtb-065dffe5aea02dc1d",
            "id": "rtb-065dffe5aea02dc1d",
            "owner_id": "471112894115",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02bda3e6d6211b332",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:route-table/rtb-07035f535ed96dfe5",
            "id": "rtb-07035f535ed96dfe5",
            "owner_id": "471112894115",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3f24a6f4be7a915",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd7b635809be38bb",
            "route_table_id": "rtb-065dffe5aea02dc1d",
            "subnet_id": "subnet-0e40101dd178530db"
          },
          "dependencies": [
            "module.vpc.aws_route_table.vpc_private_rt",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b82a081b4d9adca",
            "route_table_id": "rtb-07035f535ed96dfe5",
            "subnet_id": "subnet-035cadf8db8c1ed60"
          },
          "dependencies": [
            "module.vpc.aws_route_table.vpc_public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f2efee6d3423a4a",
            "route_table_id": "rtb-07035f535ed96dfe5",
            "subnet_id": "subnet-06c1b4f5e93914ed3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.vpc_public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e447ddc0d2c69c1f",
            "route_table_id": "rtb-07035f535ed96dfe5",
            "subnet_id": "subnet-0478f7e368234c967"
          },
          "dependencies": [
            "module.vpc.aws_route_table.vpc_public_rt",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_dbSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:security-group/sg-0e88ebf02399b2aa6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e88ebf02399b2aa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "msk-dev-sg-dbSG",
            "name_prefix": "",
            "owner_id": "471112894115",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_webSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:security-group/sg-022c1efc93943c0f9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-022c1efc93943c0f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "msk-dev-sg-webSG",
            "name_prefix": "",
            "owner_id": "471112894115",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:subnet/subnet-0e40101dd178530db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e40101dd178530db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112894115",
            "private_dns_hostname_type_on_launch": "resource-name",
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:subnet/subnet-035cadf8db8c1ed60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.3.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035cadf8db8c1ed60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112894115",
            "private_dns_hostname_type_on_launch": "resource-name",
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:subnet/subnet-06c1b4f5e93914ed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.3.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c1b4f5e93914ed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112894115",
            "private_dns_hostname_type_on_launch": "resource-name",
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:subnet/subnet-0478f7e368234c967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.3.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0478f7e368234c967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112894115",
            "private_dns_hostname_type_on_launch": "resource-name",
            "vpc_id": "vpc-0d4a72e13a764ea58"
          },
          "dependencies": [
            "module.vpc.aws_vpc.msk_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "msk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112894115:vpc/vpc-0d4a72e13a764ea58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/18",
            "default_network_acl_id": "acl-08fadfff752f091a4",
            "default_route_table_id": "rtb-001246e4c1a4ec55e",
            "default_security_group_id": "sg-0b162413c1a7e810e",
            "dhcp_options_id": "dopt-02048fa998dfd9ae8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4a72e13a764ea58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001246e4c1a4ec55e",
            "owner_id": "471112894115"
          }
        }
      ]
    }
  ]
}